--- a/static/create.html
+++ b/static/create.html
@@ -13,41 +13,53 @@
     <form class="layui-form" action="" style="padding-right: 20px;">
 
         <div class="layui-form-item">
+            <label class="layui-form-label">照片*</label>
             <div class="layui-input-block">
+                
                 <div class="layui-upload-list">
                     <img class="layui-upload-img" id="demo1" style="width: 60%;">
                     <p id="demoText"></p>
                 </div>
             </div>
             <div class="layui-input-block">
-                <button type="button" class="layui-btn" id="test1">上传图片</button>
+                <button type="button" class="layui-btn layui-btn-primary layui-btn-sm layui-border-black"
+                    id="test1">上传照片</button>
             </div>
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label">姓名</label>
+            <label class="layui-form-label">姓名*</label>
             <div class="layui-input-block">
                 <input type="text" name="name" required lay-verify="required" placeholder="请输入姓名" autocomplete="off"
                     class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">性别</label>
+            <label class="layui-form-label">性别*</label>
             <div class="layui-input-block">
                 <input type="radio" name="sex" value="男" title="男" checked>
                 <input type="radio" name="sex" value="女" title="女">
             </div>
         </div>
         <div class="layui-form-item layui-form-text">
-            <label class="layui-form-label">人物介绍</label>
+            <label class="layui-form-label">人物介绍*</label>
             <div class="layui-input-block">
                 <textarea name="introduce" placeholder="请输入人物介绍" class="layui-textarea"></textarea>
             </div>
         </div>
-        <div class="layui-form-item">
+
+        <div class="layui-form-item ">
+            <label class="layui-form-label">证书</label>
+            <button type="button" class="layui-btn layui-btn-primary layui-btn-sm layui-border-black"
+                id="test2">上传证书</button>
+            <label class="layui-form-label" id="certificate_label">未上传证书</label>
+        </div>
+
+
+        <div class="layui-form-item" style="margin-top:20px">
             <div class="layui-input-block">
-                <button class="layui-btn" lay-submit lay-filter="form_user">立即提交</button>
-                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                <button class="layui-btn" lay-submit lay-filter="form_user" , id="commit_btn">立即提交</button>
+                <button class="layui-btn layui-btn-primary", id="reset_btn">取消</button>
             </div>
         </div>
     </form>
@@ -69,18 +81,19 @@
 
             form.on('submit(form_user)', function (data) {
                 if (image_path == '') {
-                    layer.msg('请上传头像', { icon: 5 })
+                    layer.msg('请上传照片', { icon: 5 })
                     return false
                 }
+                $("#commit_btn").attr("disabled", true);
                 var _field = data.field
                 _field['avatar'] = image_path;
+                _field['certificate'] = certificate_path;
                 console.log(_field)
-
                 axios.post('/api/v1/staff', data.field)
                     .then(function (response) {
                         // console.log(response);
                         if (response.data.code == 200) {
-                            layer.msg('添加成功', {time: 1500}, function () {
+                            layer.msg('添加成功', { time: 1500 }, function () {
                                 window.parent.location.reload();
                                 var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                                 parent.layer.close(index);
@@ -117,7 +130,7 @@
 
             //证书上传
             upload.render({
-                elem: '#test1'
+                elem: '#test2'
                 , url: '/api/v1/upload_certificate'
                 , accept: 'file'
                 , acceptMime: 'file/doc,file/docx,file/pdf'
@@ -125,6 +138,10 @@
                 , before: function (obj) {
                 }
                 , done: function (res) {
+                    // # 设置为已上传，并改为绿色
+                    $('#certificate_label').text('已上传');
+                    $('#certificate_label').css('color', 'green');
+                    // $('#certificate_label').html(res.data);
                     certificate_path = res.data;
                 }
                 , error: function () {
@@ -132,6 +149,11 @@
                     certificate_path = '';
                 }
             });
+
+            lay('#reset_btn').on('click', function () {
+                var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+                parent.layer.close(index);
+			});
         });
     </script>
 </body>
