--- a/static/index.html
+++ b/static/index.html
@@ -110,10 +110,9 @@
 
 				}
 				, cols: [[
-					{ field: 'ID', width: 80, title: 'ID', sort: true }
-					, { field: 'name', width: 100, title: '用户名' }
+					{ field: 'ID', width: 80, title: 'ID'}
+					, { field: 'name', title: '姓名' }
 					, { field: 'sex', width: 80, title: '性别', sort: true }
-					, { field: 'introduce', title: '介绍' }
 				]]
 			});
 			// 行事件
