--- a/static/index.html
+++ b/static/index.html
@@ -102,7 +102,7 @@
 				elem: '#user_table'
 				, url: '/api/v1/staffs'
 				, page: { //支持传入 laypage 组件的所有参数（某些参数除外，如：jump/elem） - 详见文档
-					layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
+					layout: ['count', 'prev', 'page', 'next', 'skip'] //自定义分页布局 'limit'
 					//,curr: 5 //设定初始在第 5 页
 					, groups: 1 //只显示 1 个连续页码
 					, first: false //不显示首页
